# bitclaw

./: Cargo.toml  README.md
backend/api/: Cargo.toml
backend/common/: Cargo.toml
backend/storage/: Cargo.toml
backend/storage/migrations/: 20260328000000_create_agents_and_topics.sql  20260328000001_create_stub_tables.sql
shared/: Cargo.toml
shared/.sqlx/: query-a3b48f92d4c540a6f966219d90b808368093ac2bd47c4808edfe2117cb2b7f81.json  query-cc0a5718d7a50352953d372e56d573d1e885e9b15f7f5b586e63cc09ec1354cc.json  query-ce9bb7e75aaa8811c7a9e43989e8c36d41a42a960158b593661e54f3791a1811.json
shared/src/tracker/models/: agent.rs  env.rs  hub.rs  mod.rs
tracker/: arcadia_client  arcadia_tracker
tracker/bitclaw_client/: Cargo.toml  README.md
tracker/bitclaw_client/examples/: basic_usage.rs  persistent_client.rs  test_p2p.rs
tracker/bitclaw_client/src/: client.rs  error.rs  lib.rs  protocol.rs  tcp.rs  upnp.rs
tracker/bitclaw_openclaw/: AUTO_FORWARD_IMPLEMENTATION.md  MANUAL_TEST_GUIDE.sh  README.md  SCRIPTS.md  SKILL.md  TEST.md  api.ts  index.ts  package-lock.json  package.json  send-message.sh  start-listener.sh  test-e2e.sh  test-integration.sh  test-listen-e2e.sh
tracker/bitclaw_openclaw/src/: service.ts  tools.ts
tracker/bitclaw_tracker/: .env.ci  .env.docker  .env.example  Cargo.toml  Dockerfile  TESTING.md  build-and-test.sh  demo_2clients.py  smoke_test.py  smoke_test_multiclient.py
tracker/bitclaw_tracker/.sqlx/: query-2bf7e1f7feb94b81be04f33a0890b148da53ced627dad671e9f452ee2dbc42d7.json  query-43ca35fea526b25dffb69e86700c0d3a1bdebdb973df5059ff7eb3e9a933eb33.json  query-46d7eee133e0653d9f11ab67f5d6faec7050c9b4c6a8c78e2097015d3e0fb7fb.json  query-4edda78ffd766d9ec15eb015fe5b985755924b0f0b44d5cf9411059cfbc5c757.json  query-599587c7ce69b090843274603171c411af859ae256fc01eaf66af2aa2a922900.json  query-6c4a5f875d86d837493c8bf2a8e4f6fb93f4e50dce73ca6d07d42df32a80308a.json  query-730887e241dfb873fe5798206195db32d76c70b01b48b9ecdb57ef7338718fad.json  query-7da73662a96a68e239d011598ace3bc5b287a82c5b0c34ce9543842a1bed0ea4.json  query-84495aeb13132c19448828fe69b37217079dff8bfdf89ea7717145becea076e0.json  query-c45f235654a1b2aa8c849c5644443fe34ea7a4dd976fe6b4405e7b4a585a1325.json  query-c4e55538610671cfcf982e49c58425223e356c29912d19d4e62cf7b576637c0a.json  query-d94c7cf9c02a4f060345d02ac4bd2434069fc46d43e6f3e7e3618737c2dcd547.json  query-db1ed9ff3f1eda515c4b7a0704db5f39079a8caa928137c8f18ad81ee8ceb66a.json  query-f4de9d3dad0a4229f75304798debf8ab4a602081f6e429658262bc9e58f7320b.json  query-f6d849721ff84614c129c14455d9a6adbe0ad29b7876963d5bd9015c0f73ba9d.json
tracker/bitclaw_tracker/src/: api_doc.rs  env.rs  lib.rs  main.rs  metrics.rs  middleware.rs  routes.rs  scheduler.rs
tracker/bitclaw_tracker/src/handlers/: hubs.rs  mod.rs
tracker/bitclaw_tracker/src/handlers/agents/: heartbeat.rs  mod.rs  rate.rs  register.rs  search.rs
tracker/bitclaw_tracker/tests/: common.rs  test_announce.rs
tracker/bitclaw_tracker/tests/fixtures/: with_bonus_transfer_to_none.sql  with_bonus_transfer_to_seeders.sql  with_bonus_transfer_to_uploader.sql  with_test_edition_group.sql  with_test_peers.sql  with_test_title_group.sql  with_test_torrent.sql  with_test_torrent_2.sql  with_test_torrent_3.sql  with_test_torrent_snatch_cost.sql  with_test_user.sql  with_test_user_bonus_points.sql  with_test_user_low_bonus_points.sql  with_test_user_snatch_limit.sql
