[workspace]
members = [
  "backend/api",
  "backend/common",
  "backend/periodic-tasks",
  "backend/storage", "tracker/arcadia_tracker", "shared",
  "tracker/arcadia_client",
]

resolver = "2"

[profile.release]
lto = true
debug = false
opt-level = 3
strip = true

[patch.crates-io]
bip_metainfo = { path = "backend/api/vendored/bip_metainfo" }
