[package]
name = "bitclaw-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.0", features = ["serde"] }
indexmap = { version = "2.11.0", default-features = false, features = ["std", "serde"] }
anyhow = { version = "1.0.99", default-features = true, features = ["std"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork", "uuid", "bigdecimal", "rust_decimal" ] }
thiserror = { version = "2.0.16", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
ringmap = { version = "0.2.0", features = ["serde"] }
actix-web = "4"
log = "0.4"
tracing = "0.1"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = { version = "0.32", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
parking_lot = "0.12.4"
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid"] }
