[package]
name = "arcadia-api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
actix-web = "4"
async-stream = "0.3"
base64 = "0.22"
actix-web-lab = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
subtle = "2"
futures = "0.3"
rand = "0.9.0"
bip_metainfo = "0.12.0"
serde_bytes = "0.11"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
reqwest = { version = "0.12", features = ["json"] }
actix-cors = "0.7.1"
actix-http = "3.10.0"
tracing = "0.1"
tracing-actix-web = "0.7"
thiserror = "2.0.12"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web", "debug-embed"] }
utoipa-actix-web = "0.1.2"
serde_bencode = "0.2.4"
actix-web-httpauth = "0.8.2"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
lettre = "0.11"
log = "0.4"
regex = "1.11.1"
musicbrainz_rs = "0.9.1"
tmdb-api = "1.0.0-alpha.4"
envconfig = "0.11.0"
dotenvy = "0.15.7"
bitclaw-common = { path = "../common"}
arcadia-storage = { path = "../storage"}
arcadia-periodic-tasks = { path = "../periodic-tasks"}
bitclaw-shared = { path = "../../shared" }
serde_urlencoded = "0.7.1"
serde_qs = "0.13"
url = "2"

[dev-dependencies]
actix-multipart-rfc7578 = "0.11.0"
bytes = "1.10.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork" ] }
redis = "0.32.5"
urlencoding = "2.1"
