[package]
name = "bitclaw-common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-lab = "0.24.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.1"
log = "0.4"
reqwest = "0.12"
musicbrainz_rs = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
serde_bencode = "0.2.4"
sqlx = "0.8"
thiserror = "2.0.12"
percent-encoding = "2.3.1"
opentelemetry = "0.31"
strum = { version = "0.27", features = ["derive"] }
