[package]
name = "arcadia-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
bitclaw-common = { path = "../common"}
argon2 = "0.5.3"
bip_metainfo = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork", "json" ] }
thiserror = "2.0.12"
redis = { version = "0.32.5", features = ["tokio-comp"] }
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
strum = { version = "0.27", features = ["derive"] }
musicbrainz_rs = "0.9.1"
rand = "0.9.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
indexmap = { version = "2.11.0", default-features = false, features = ["std", "serde"] }
regex = "1.11.1"
log = "0.4"
bitclaw-shared = { path = "../../shared" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
url = "2"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]
