[package]
name = "bitclaw_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
tokio-stream = "0.1"

# Futures utilities for SinkExt
futures-util = { version = "0.3", features = ["sink"] }

# HTTP client for tracker communication
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# For TCP framing
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }

# URL encoding
url-escape = "0.1"

# UPnP for port forwarding
igd = "0.12"
