[package]
name = "bitclaw_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
envconfig = "0.11.0"
dotenvy = "0.15.7"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web", "debug-embed"] }
utoipa-actix-web = "0.1.2"
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-actix-web = "0.7"
thiserror = "2.0.12"
actix-web-httpauth = "0.8.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "std"] }
log = "0.4"
serde_bencode = "0.2.4"
anyhow = { version = "1.0.99", default-features = true, features = ["std"] }
bitclaw-shared = { path = "../../shared" }
opentelemetry = { version = "0.31", features = ["metrics"] }
parking_lot = "0.12.4"
percent-encoding = "2.3.1"
rand = { version = "0.9.2", default-features = false, features = ["alloc", "thread_rng"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork", "uuid", "rust_decimal" ] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.41", features = ["serde"] }
num-traits = "0.2"

[dev-dependencies]
actix-http = "3.10.0"
